package com.sitzplatzverwaltung.domain.model;

/**
 * Grund für eine Sitzplatzzuweisung.
 * Entspricht dem UML-Klassendiagramm v4.
 */
public enum AssignmentReason {
    AUTOMATISCH,
    MANUELL,
    UPGRADE
}
