package com.sitzplatzverwaltung.domain.model;

/**
 * Kabinenklassen im Airbus A350-900.
 * Entspricht dem UML-Klassendiagramm v4.
 */
public enum CabinClass {
    Business,
    PremiumEconomy,
    Economy
}
