package com.sitzplatzverwaltung.domain.model;

/**
 * Rollenmodell für Mitarbeiter (RBAC).
 * Entspricht dem UML-Klassendiagramm v4.
 */
public enum EmployeeRole {
    CheckInAgent,
    Supervisor
}
