package com.sitzplatzverwaltung.domain.model;

/**
 * Status eines Sitzplatzes.
 * Entspricht dem UML-Klassendiagramm v4.
 */
public enum SeatStatus {
    AVAILABLE,
    RESERVED,
    ASSIGNED,
    BLOCKED
}
